[package]
name = "tic-tac-toe"
version = "0.1.0"
authors = ["Mark Lodato <mlodato517@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
async-tungstenite = "*"
futures = "0.3.4"
tungstenite = "0.10.1"
