[package]
name = "snake"
version = "0.1.0"
authors = ["Mark Lodato <mlodato517@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
async-std = "1.5.0"
async-tungstenite = "*"
futures = "0.3.4"
tungstenite = "0.10.1"
